--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -13,6 +13,7 @@
     <script src="<%= PP %>/js/<%= filenameMap['fantom_helpers.js'] %>"></script>
     <script src="<%= PP %>/js/<%= filenameMap['harmony_helpers.js'] %>"></script>
     <script src="<%= PP %>/js/<%= filenameMap['pool_table_helpers.js'] %>"></script>
+    <script src="<%= PP %>/js/<%= filenameMap['thundercore_helpers.js'] %>"></script>
     <% if(locals.scriptname) { %>
         <script src="<%= PP %>/js/<%= filenameMap[locals.scriptname + ".js"] %>"></script>
     <% } %>
@@ -31,6 +32,7 @@
     <script src="<%= PP %>/js/fantom_helpers.js"></script>
     <script src="<%= PP %>/js/harmony_helpers.js"></script>
     <script src="<%= PP %>/js/pool_table_helpers.js"></script>
+    <script src="<%= PP %>/js/thundercore_helpers.js"></script>
     <% if(locals.scriptname) { %>
         <script src="<%= PP %>/js/<%= locals.scriptname %>.js"></script>
     <% } %>
